// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Evaluation Content snapshot for all policy set statuses and policy set headers 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-top StyledProps--padding-medium"
  >
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--margin-right-large"
      >
        pipeline.policyEvaluations.title
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-red800"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        3
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        1
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green800"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        1
      </p>
    </div>
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Collapse--main collapse"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-right-small"
                data-icon="main-chevron-down"
              >
                <svg
                  height="10"
                  viewBox="0 0 14 8"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
                  style="--text-line-clamp: 1; width: 300px;"
                >
                  <a
                    href="/account/undefined/settings/governance/policy-sets"
                  >
                    pipeline.policyEvaluations.policySetName
                  </a>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  style="width: 100px;"
                >
                  orgLabel
                </p>
                <div
                  class="status success"
                >
                  <span
                    class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                    icon="tick-circle"
                  >
                    <svg
                      data-icon="tick-circle"
                      height="9"
                      viewBox="0 0 16 16"
                      width="9"
                    >
                      <desc>
                        tick-circle
                      </desc>
                      <path
                        d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    pipeline.executionStatus.Success
                  </span>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Collapse--main collapse"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-right-small"
                data-icon="main-chevron-down"
              >
                <svg
                  height="10"
                  viewBox="0 0 14 8"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
                  style="--text-line-clamp: 1; width: 300px;"
                >
                  <a
                    href="/account/undefined/settings/governance/policy-sets"
                  >
                    pipeline.policyEvaluations.policySetName
                  </a>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  style="width: 100px;"
                >
                  account
                </p>
                <div
                  class="status errored"
                >
                  <span
                    class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
                    icon="warning-sign"
                  >
                    <svg
                      data-icon="warning-sign"
                      height="9"
                      viewBox="0 0 16 16"
                      width="9"
                    >
                      <desc>
                        warning-sign
                      </desc>
                      <path
                        d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span>
                    pipeline.executionStatus.Failed
                  </span>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Collapse--main collapse"
        >
          <div
            class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
          >
            <div
              class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--padding-right-small"
                data-icon="main-chevron-down"
              >
                <svg
                  height="10"
                  viewBox="0 0 14 8"
                  width="10"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
              >
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
                  style="--text-line-clamp: 1; width: 300px;"
                >
                  <a
                    href="/account/undefined/settings/governance/policy-sets"
                  >
                    pipeline.policyEvaluations.policySetName
                  </a>
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-small"
                  style="width: 100px;"
                >
                  projectLabel
                </p>
                <div
                  class="status errored warning"
                >
                  <span
                    class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
                    icon="warning-sign"
                  >
                    <svg
                      data-icon="warning-sign"
                      height="9"
                      viewBox="0 0 16 16"
                      width="9"
                    >
                      <desc>
                        warning-sign
                      </desc>
                      <path
                        d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  WARNING
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            />
          </div>
          <div
            class="Collapse--collapse"
          >
            <div
              class="bp3-collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--margin-left-large"
      >
        common.policy.noPolicyResult
      </p>
    </div>
  </div>
</div>
`;

exports[`Policy Evaluation Content snapshot for no policy details 1`] = `
<div>
  <p
    class="StyledProps--font StyledProps--main StyledProps--margin-left-large"
  >
    common.policy.noPolicyEvalResult
  </p>
</div>
`;

exports[`Policy Info under Policy Evaluation Content snapshot renders for failed policy with > 1 deny messages 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start StyledProps--padding-top-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
        style="--text-line-clamp: 1; width: 400px;"
      >
        <a
          href="/account/undefined/settings/governance/policies"
        >
          Policy 1: Account Policy 2
        </a>
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-xxxlarge StyledProps--padding-top-small StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
          >
            DETAILS
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-error"
            >
              - 
              Deny Message 1
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-error"
            >
              - 
              Deny Message 2
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-error"
            >
              - 
              Deny Message 3
            </p>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="status errored"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="9"
          viewBox="0 0 16 16"
          width="9"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        pipeline.executionStatus.Failed
      </span>
    </div>
  </div>
</div>
`;

exports[`Policy Info under Policy Evaluation Content snapshot renders for failed policy with 1 deny message 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start StyledProps--padding-top-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
        style="--text-line-clamp: 1; width: 400px;"
      >
        <a
          href="/account/undefined/settings/governance/policies"
        >
          Policy 1: Account Policy 1
        </a>
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-xxxlarge StyledProps--padding-top-small StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
          >
            DETAILS
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-error"
            >
              
              Deny Message 1
            </p>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="status errored"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="9"
          viewBox="0 0 16 16"
          width="9"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        pipeline.executionStatus.Failed
      </span>
    </div>
  </div>
</div>
`;

exports[`Policy Info under Policy Evaluation Content snapshot renders for failed policy with 1 error message 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start StyledProps--padding-top-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
        style="--text-line-clamp: 1; width: 400px;"
      >
        <a
          href="/account/undefined/settings/governance/policies"
        >
          Policy 1: Account Policy 3
        </a>
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-xxxlarge StyledProps--padding-top-small StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
          >
            ERROR
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-error"
            >
              Error Message 1
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="status errored"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="9"
          viewBox="0 0 16 16"
          width="9"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        pipeline.executionStatus.Failed
      </span>
    </div>
  </div>
</div>
`;

exports[`Policy Info under Policy Evaluation Content snapshot renders for passed policy 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start StyledProps--padding-top-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
        style="--text-line-clamp: 1; width: 400px;"
      >
        <a
          href="/account/undefined/settings/governance/policies"
        >
          Policy 1: Org Policy 1
        </a>
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        
      </div>
    </div>
    <div
      class="status success"
    >
      <span
        class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
        icon="tick-circle"
      >
        <svg
          data-icon="tick-circle"
          height="9"
          viewBox="0 0 16 16"
          width="9"
        >
          <desc>
            tick-circle
          </desc>
          <path
            d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        pipeline.executionStatus.Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Policy Info under Policy Evaluation Content snapshot renders for policy with warning 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-flex-start StyledProps--padding-top-large"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--padding-right-small"
        style="--text-line-clamp: 1; width: 400px;"
      >
        <a
          href="/account/undefined/settings/governance/policies"
        >
          Policy 1: Policy 1
        </a>
      </p>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-left-xxxlarge StyledProps--padding-top-small StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
          >
            DETAILS
          </p>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-warning"
            >
              
              Deny Message 1
            </p>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="status errored warning"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="9"
          viewBox="0 0 16 16"
          width="9"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      WARNING
    </div>
  </div>
</div>
`;
